--- a/public/roulette.html
+++ b/public/roulette.html
@@ -9,63 +9,58 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             background-color: transparent; /* Прозрачный фон для OBS */
-            font-family: 'Roboto', sans-serif; /* Более современный шрифт */
-            overflow: hidden; /* Скрываем всё, что выходит за рамки */
+            font-family: 'Roboto', sans-serif;
+            overflow: hidden;
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            user-select: none; /* Запрещаем выделение текста */
+            user-select: none;
         }
 
         /* Контейнер всей рулетки */
         .roulette-wrapper {
             position: relative;
-            width: 80%; /* Шире для лучшего обзора */
-            max-width: 1000px; /* Максимальная ширина */
-            height: 200px; /* Увеличена высота рулетки */
-            margin-top: -100px; /* Приподнимаем от центра экрана */
-            opacity: 0; /* Изначально скрыт */
-            transform: translateY(-50px); /* Уезжает слегка за экран */
+            width: 80%;
+            max-width: 1000px;
+            height: 200px;
+            margin-top: -100px;
+            opacity: 0;
+            transform: translateY(-50px);
             transition: opacity 0.7s ease, transform 0.7s ease;
-            box-shadow: 0 0 50px rgba(0, 0, 0, 0.5); /* Общая тень для глубины */
-            border-radius: 15px; /* Скругленные углы */
-            overflow: hidden; /* Скрывает края ленты */
+            border-radius: 15px;
+            overflow: hidden;
         }
         .roulette-wrapper.visible {
             opacity: 1;
             transform: translateY(0);
         }
 
-        /* Основной контейнер рулетки с фоном и градиентом */
+        /* Основной контейнер рулетки с фоном и blur */
         .roulette-container {
             width: 100%;
             height: 100%;
-            /* Усиленный градиент для виньетки и лучшей контрастности */
-            background: linear-gradient(to right,
-                        rgba(0,0,0,0.95) 0%, /* Почти полностью непрозрачный по краям */
-                        rgba(0,0,0,0.7) 15%, /* Чуть менее прозрачный */
-                        transparent 50%,
-                        rgba(0,0,0,0.7) 85%,
-                        rgba(0,0,0,0.95) 100%);
+            background: rgba(0, 0, 0, 0.4);
+            backdrop-filter: blur(18px);
+            -webkit-backdrop-filter: blur(18px);
             position: relative;
             display: flex;
             align-items: center;
         }
 
-        /* Указатель (стрелка), который показывает на победителя */
+        /* Указатель */
         .pointer-line {
             position: absolute;
             top: 0;
             left: 50%;
             transform: translateX(-50%);
             width: 4px;
-            height: 100%; /* На всю высоту контейнера */
+            height: 100%;
             background: #ffc107;
-            box-shadow: 0 0 18px #ffc107, 0 0 8px rgba(255, 255, 255, 0.8); /* Усиленная тень */
+            box-shadow: 0 0 15px #ffc107;
             z-index: 10;
         }
-        .pointer-line::before { /* Верхняя часть указателя */
+        .pointer-line::before {
             content: '';
             position: absolute;
             top: -15px;
@@ -75,7 +70,7 @@
             border-right: 15px solid transparent;
             border-top: 15px solid #ffc107;
         }
-        .pointer-line::after { /* Нижняя часть указателя */
+        .pointer-line::after {
             content: '';
             position: absolute;
             bottom: -15px;
@@ -86,81 +81,63 @@
             border-top: 15px solid #ffc107;
         }
 
-
         /* Лента с призами */
         .reel {
             display: flex;
             position: absolute;
-            left: 50%; /* Начинаем ленту от центра экрана */
+            left: 50%;
         }
 
-        /* Отдельный элемент (приз) в ленте */
+        /* Карточки */
         .item {
-            min-width: 180px; /* Увеличена ширина карточки */
-            height: 180px; /* Увеличена высота карточки */
-            margin: 0 7px; /* Немного увеличен отступ */
-            background: rgba(255, 255, 255, 0.2); /* Чуть светлее фон */
-            border-radius: 12px; /* Более скругленные углы */
-            border: 2px solid rgba(255, 255, 255, 0.4); /* Более заметная обводка */
+            min-width: 180px;
+            height: 180px;
+            margin: 0 7px;
+            background: rgba(255, 255, 255, 0.08);
+            border-radius: 12px;
+            border: 2px solid rgba(255, 255, 255, 0.2);
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
-            /* Убрали padding, чтобы картинка могла стать больше */
-            transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease, filter 0.3s ease;
-            filter: brightness(1.05) grayscale(5%); /* Еще ярче, меньше серого, немного резкости */
+            transition: transform 0.3s ease, border-color 0.3s ease, filter 0.3s ease;
+            filter: brightness(1) grayscale(0);
             text-align: center;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.5); /* Более выраженная тень */
+            box-shadow: none; /* убрали блики */
         }
         .item img {
-            /* --- ИЗМЕНЕНИЕ: Картинка стала больше --- */
             width: 100%;
             height: 100%;
             object-fit: contain;
-            border-radius: 8px; /* Скругление изображения */
-            image-rendering: -webkit-optimize-contrast; /* Повышение резкости изображения */
-            image-rendering: crisp-edges;
-        }
-        .item-name {
-            /* Этот класс больше не используется в ленте, но оставим для справки */
-            color: #fff;
-            font-size: 15px;
-            font-weight: 600;
-            margin-top: 8px;
-            text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.95);
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            max-width: 100%;
+            border-radius: 8px;
         }
 
-        /* Стиль для победившего элемента */
+        /* Победитель */
         .item.winner {
-            transform: scale(1.08); /* Увеличиваем победителя чуть больше */
-            border-color: #ffeb3b; /* Яркий желтый */
-            box-shadow: 0 0 40px #ffeb3b, 0 0 20px rgba(255, 255, 255, 0.9); /* Усиленная тень */
-            filter: brightness(1.2) grayscale(0%) contrast(1.1); /* Еще ярче, без серого, с контрастом */
+            transform: scale(1.08);
+            border-color: #FFD700;
+            box-shadow: 0 0 25px #FFD700, 0 0 50px rgba(255, 215, 0, 0.8);
+            filter: brightness(1.2) contrast(1.1);
         }
 
-        /* Секция победителя (появляется после прокрутки) */
+        /* Окно победителя */
         .winner-display {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 550px; /* Увеличена ширина для текста */
-            background: rgba(0, 0, 0, 0.95); /* Более темный фон для контраста */
-            border: 3px solid #FFC107; /* Золотистая рамка */
-            border-radius: 18px; /* Более скругленные углы */
-            padding: 30px; /* Больше отступов */
+            width: 550px;
+            background: rgba(0, 0, 0, 0.9);
+            border: 3px solid #FFC107;
+            border-radius: 18px;
+            padding: 30px;
             text-align: center;
             color: #fff;
-            font-size: 28px; /* Увеличен шрифт */
+            font-size: 28px;
             font-weight: bold;
-            box-shadow: 0 0 50px rgba(255, 193, 7, 0.9);
+            box-shadow: 0 0 40px rgba(255, 193, 7, 0.7);
             opacity: 0;
             transition: opacity 0.6s ease;
-            z-index: 20; /* Выше рулетки */
+            z-index: 20;
         }
         .winner-display.visible {
             opacity: 1;
@@ -171,10 +148,8 @@
             object-fit: contain;
             border-radius: 12px;
             margin-top: 20px;
-            border: 3px solid #ffea00;
-            box-shadow: 0 0 25px rgba(255, 234, 0, 0.8);
-            image-rendering: -webkit-optimize-contrast;
-            image-rendering: crisp-edges;
+            border: 3px solid #FFD700;
+            box-shadow: 0 0 25px rgba(255, 215, 0, 0.7);
         }
         .winner-display .winner-prize-name {
             font-size: 34px;
