--- a/public/roulette.html
+++ b/public/roulette.html
@@ -102,7 +102,7 @@
             transition: transform 0.3s ease, border-color 0.3s ease, filter 0.3s ease;
             filter: brightness(1) grayscale(0);
             text-align: center;
-            box-shadow: none; /* убрали блики */
+            box-shadow: none;
         }
         .item img {
             width: 100%;
@@ -126,15 +126,17 @@
             left: 50%;
             transform: translate(-50%, -50%);
             width: 550px;
-            background: rgba(0, 0, 0, 0.9);
-            border: 3px solid #FFC107;
+            background: rgba(0, 0, 0, 0.45); /* полупрозрачный фон */
+            backdrop-filter: blur(18px);
+            -webkit-backdrop-filter: blur(18px);
+            border: 3px solid rgba(255, 215, 0, 0.6);
             border-radius: 18px;
             padding: 30px;
             text-align: center;
             color: #fff;
             font-size: 28px;
             font-weight: bold;
-            box-shadow: 0 0 40px rgba(255, 193, 7, 0.7);
+            box-shadow: 0 0 40px rgba(255, 215, 0, 0.3);
             opacity: 0;
             transition: opacity 0.6s ease;
             z-index: 20;
@@ -149,13 +151,13 @@
             border-radius: 12px;
             margin-top: 20px;
             border: 3px solid #FFD700;
-            box-shadow: 0 0 25px rgba(255, 215, 0, 0.7);
+            box-shadow: 0 0 25px rgba(255, 215, 0, 0.5);
         }
         .winner-display .winner-prize-name {
             font-size: 34px;
             color: #FFD700;
             margin-top: 15px;
-            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.9);
+            text-shadow: 0 0 10px rgba(255, 215, 0, 0.6);
         }
         .winner-display .winner-user-name {
             font-size: 40px;
@@ -163,7 +165,7 @@
             margin-top: 15px;
             text-transform: uppercase;
             letter-spacing: 2px;
-            text-shadow: 3px 3px 7px rgba(0, 0, 0, 0.95);
+            text-shadow: 0 0 12px rgba(255, 215, 0, 0.8);
         }
     </style>
 </head>
