--- a/public/roulette.html
+++ b/public/roulette.html
@@ -36,19 +36,30 @@
             transform: translateY(0);
         }
 
-        /* Основной контейнер рулетки с фоном и blur */
+        /* Основной контейнер рулетки */
         .roulette-container {
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.4);
-            backdrop-filter: blur(18px);
-            -webkit-backdrop-filter: blur(18px);
             position: relative;
             display: flex;
             align-items: center;
+            overflow: hidden;
+        }
+        .roulette-container::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(135deg, #111 0%, #333 100%);
+            filter: blur(25px);
+            transform: scale(1.2);
+            z-index: 0;
+        }
+        .reel, .pointer-line {
+            position: relative;
+            z-index: 1;
         }
 
-        /* Указатель */
+        /* Указатель (стрелка) */
         .pointer-line {
             position: absolute;
             top: 0;
@@ -57,7 +68,7 @@
             width: 4px;
             height: 100%;
             background: #ffc107;
-            box-shadow: 0 0 15px #ffc107;
+            box-shadow: 0 0 18px #ffc107, 0 0 8px rgba(255, 255, 255, 0.8);
             z-index: 10;
         }
         .pointer-line::before {
@@ -88,34 +99,34 @@
             left: 50%;
         }
 
-        /* Карточки */
+        /* Карточка приза */
         .item {
             min-width: 180px;
             height: 180px;
             margin: 0 7px;
-            background: rgba(255, 255, 255, 0.08);
+            background: rgba(255, 255, 255, 0.1);
             border-radius: 12px;
-            border: 2px solid rgba(255, 255, 255, 0.2);
+            border: 2px solid rgba(255, 255, 255, 0.25);
             display: flex;
             justify-content: center;
             align-items: center;
-            transition: transform 0.3s ease, border-color 0.3s ease, filter 0.3s ease;
-            filter: brightness(1) grayscale(0);
+            transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease, filter 0.3s ease;
+            filter: brightness(1.05);
             text-align: center;
-            box-shadow: none;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.5);
         }
         .item img {
             width: 100%;
             height: 100%;
             object-fit: contain;
             border-radius: 8px;
+            image-rendering: -webkit-optimize-contrast;
+            image-rendering: crisp-edges;
         }
-
-        /* Победитель */
         .item.winner {
             transform: scale(1.08);
-            border-color: #FFD700;
-            box-shadow: 0 0 25px #FFD700, 0 0 50px rgba(255, 215, 0, 0.8);
+            border-color: #ffeb3b;
+            box-shadow: 0 0 40px #ffeb3b, 0 0 20px rgba(255, 255, 255, 0.9);
             filter: brightness(1.2) contrast(1.1);
         }
 
@@ -126,7 +137,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             width: 550px;
-            background: rgba(0, 0, 0, 0.45); /* полупрозрачный фон */
+            background: rgba(0, 0, 0, 0.45);
             backdrop-filter: blur(18px);
             -webkit-backdrop-filter: blur(18px);
             border: 3px solid rgba(255, 215, 0, 0.6);
@@ -141,9 +152,7 @@
             transition: opacity 0.6s ease;
             z-index: 20;
         }
-        .winner-display.visible {
-            opacity: 1;
-        }
+        .winner-display.visible { opacity: 1; }
         .winner-display .winner-prize-image {
             width: 150px;
             height: 150px;
