--- a/public/roulette.html
+++ b/public/roulette.html
@@ -5,7 +5,6 @@
     <title>Яркая Рулетка для Стрима</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
-        /* Общие стили */
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             background-color: transparent;
@@ -18,10 +17,10 @@
             user-select: none;
         }
 
-        /* Надпись награды */
+        /* Надпись текущей награды — чуть ниже */
         .current-prize {
             position: absolute;
-            top: 10%;
+            top: 20%; /* сдвинули вниз */
             width: 100%;
             text-align: center;
             font-size: 20px;
@@ -66,10 +65,6 @@
             filter: blur(25px);
             transform: scale(1.2);
             z-index: 0;
-        }
-        .reel, .pointer-line {
-            position: relative;
-            z-index: 1;
         }
 
         /* Указатель */
@@ -279,14 +274,15 @@
 
     function runAnimation(payload) {
         return new Promise((resolve) => {
-            const { prizes, winner_index, user_name } = payload.new.payload;
-            const winnerPrize = prizes[winner_index];
+            const { prizes, winner_index, user_name, prize_name } = payload.new.payload;
+
+            // Показываем надпись купленной награды
+            currentPrizeText.textContent = prize_name;
 
             reel.innerHTML = '';
             reel.style.transition = 'none';
             reel.style.transform = 'translateX(0px)';
             winnerDisplay.classList.remove('visible');
-            currentPrizeText.textContent = winnerPrize.skin_name;
 
             const existingWinner = document.querySelector('.item.winner');
             if (existingWinner) existingWinner.classList.remove('winner');
@@ -328,8 +324,8 @@
                     rouletteWrapper.classList.remove('visible');
                     winnerDisplay.classList.add('visible');
                     winnerUserText.textContent = user_name;
-                    winnerPrizeImage.src = winnerPrize.image_url;
-                    winnerPrizeName.textContent = winnerPrize.skin_name;
+                    winnerPrizeImage.src = prizes[winner_index].image_url;
+                    winnerPrizeName.textContent = prizes[winner_index].skin_name;
 
                     setTimeout(() => {
                         winnerDisplay.classList.remove('visible');
