--- a/public/checkpoint.html
+++ b/public/checkpoint.html
@@ -371,7 +371,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 </div>`;
 
             item.innerHTML = `
-                <div class="reward-level">${reward.level} процент <i class="fa-solid fa-battery-three-quarters"></i> </div>
+                <div class="reward-level">${reward.level} % <i class="fa-solid fa-battery-three-quarters"></i> </div>
                 ${editOverlayHtml}
                 <div class="reward-image-container">
                     <img src="${reward.icon || 'https://i.ibb.co/3s7vXG5/placeholder.png'}" class="reward-image" alt="${reward.title}">
