--- a/public/menu.html
+++ b/public/menu.html
@@ -428,15 +428,15 @@
     </div>
     
     <div id="view-quests" class="view quests-container hidden">
-        <h2 class="page-title" style="grid-column: 1 / -1; color: #ffc700; text-shadow: 0 0 8px rgba(255, 204, 0, 0.7);">
+        <h2 class="page-title" style="grid-column: 1 / -1;">
             📝 Задания с ручной проверкой
+            <span class="manual-hint" style="display: block; font-size: 11px; color: #ffffff; text-align: center; margin-top: 6px; margin-bottom: 12px;">
+                Все полученные промокоды вы найдёте в разделе
+                <span style="color: #ffc700; font-weight: 600;">Профиль</span>.
+            </span>
         </h2>
-        <p style="grid-column: 1 / -1; font-size: 11px; color: #ffffff; text-align: center; margin-top: -8px; margin-bottom: 12px;">
-            Все полученные промокоды вы найдёте в разделе 
-            <span style="color: #ffc700; font-weight: 600;">Профиль</span>.
-        </p>
     </div>
-
+    
   </main>
   
   <footer class="app-footer">
