--- a/public/menu.html
+++ b/public/menu.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-  <link rel="stylesheet" href="menu.css" />
+  <!-- Абсолютный путь к CSS -->
+  <link rel="stylesheet" href="/menu.css" />
 </head>
 <body>
   <div id="loader-overlay" class="loader-overlay">
@@ -142,6 +143,7 @@
     </div>
   </div>
 
-  <script src="menu.js"></script>
+  <!-- Абсолютный путь к JS -->
+  <script src="/menu.js"></script>
 </body>
 </html>
