--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -147,7 +147,7 @@
       <div class="icon-wrapper"><i class="fa-solid fa-trophy"></i></div>
       <span>Лидерборд</span>
     </a>
-    <a href="menu.html" class="footer-item">
+    <a href="/menu" class="footer-item">
       <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
       <span>Главная</span>
     </a>
